Login, Register and Dashboard ( Desktop and Mobile ) --> A3

--- a/artifacts/A3/A3.md
+++ b/artifacts/A3/A3.md
@@ -6,7 +6,7 @@ This artifact contains the overview of the interface elements and features for o
 
 **Plenum** is a web application based on HTML5, JavaScript and CSS. The user interface was implemented using the Bootstrap framework.
 
-<img src="images/Common_features/Homepage.png" width="650" title="Homepage"> <img src="images/Common_features/Homepage_M2.png" height="453" title="Homepage_Mobile">
+<img src="images/Common_features/Homepage.png" width="650" title="Homepage"> <img src="images/Common_features/Homepage_M.png" height="453" title="Homepage_Mobile">
 
 
 1.  Logo
@@ -53,7 +53,7 @@ Figure 6: Create Task from Dashboard.
 
 ## 4. Interfaces
 ### UI01: Homepage
-<img src="images/Interface/UI01_Homepage.png" title="Homepage">
+<img src="images/Interface/UI01_Homepage.png" width="650" title="Homepage"> <img src="images/Interface/UI01_Homepage_M.png" height="453" title="Homepage_Mobile">
 
 Figure 7: [Homepage](https://paginas.fe.up.pt/~up201506252/index.php).
 
@@ -68,17 +68,17 @@ Figure 8: [FAQ](https://paginas.fe.up.pt/~up201506252/faq.php).
 Figure 9: [About](https://paginas.fe.up.pt/~up201506252/about.php).
 
 ### UI04: Log In:
-<img src="images/Interface/UI05_Login.png" title="Log In">
+<img src="images/Interface/UI04_Login.png" width="650" title="Login"> <img src="images/Interface/UI04_Login_M.png" height="453" title="Login_Mobile">
 
 Figure 10: Log In.
 
-### UI05: Sign Up:
-<img src="images/Interface/UI05_Sign Up.png" title="Sign Up">
+### UI05: Register:
+<img src="images/Interface/UI05_Register.png" width="650" title="Register"> <img src="images/Interface/UI05_Register_M.png" height="453" title="Register_Mobile">
 
-Figure 11: Sign Up.
+Figure 11: Register.
 
 ### UI06: Dashboard:
-<img src="images/Interface/UI06_Dashboard.png" title="Dashboard">
+<img src="images/Interface/UI06_Dashboard.png" width="650" title="Dashboard"> <img src="images/Interface/UI06_Dashboard_M.png" height="453" title="Dashboard_Mobile">
 
 Figure 12: [Dashboard](https://paginas.fe.up.pt/~up201506252/dashboard.php).
 
