Dashboard Projects and Error --> A3

--- a/artifacts/A3/A3.md
+++ b/artifacts/A3/A3.md
@@ -83,7 +83,7 @@ Figure 11: Register.
 Figure 12: [Dashboard](https://paginas.fe.up.pt/~up201506252/dashboard.php).
 
 ### UI07: Dashboard My Projects:
-<img src="images/Interface/UI07_Dashboard_projects.png" title="Dashboard My Projects">
+<img src="images/Interface/UI07_Dashboard_Projects.png" width="650" title="Dashboard_Projects"> <img src="images/Interface/UI07_Dashboard_Projects_M.png" height="453" title="Dashboard_Projects_Mobile">
 
 Figure 13: [Dashboard My Projects](https://paginas.fe.up.pt/~up201506252/dashboard_my_projects.php).
 
@@ -178,7 +178,7 @@ Figure 30: [Administration Manage Projects](https://paginas.fe.up.pt/~up20150625
 Figure 31: [Administration Manage Users](https://paginas.fe.up.pt/~up201506252/admin/users.php).
 
 ### UI26: Error Page:
-<img src="images/Interface/UI26_Error.png" title="Error Page">
+<img src="images/Interface/UI26_Error.png" width="650" title="Error"> <img src="images/Interface/UI26_Error_M.png" height="453" title="Error_Mobile">
 
 Figure 32: [Error Page](https://paginas.fe.up.pt/~up201506252/error.php).
 
