Admin Login and Search Projects --> A3

--- a/artifacts/A3/A3.md
+++ b/artifacts/A3/A3.md
@@ -148,7 +148,7 @@ Figure 24: [Profile](https://paginas.fe.up.pt/~up201506252/profile.php).
 Figure 25: Edit Profile.
 
 ### UI20: Search by Projects:
-<img src="images/Interface/UI20_Search_projects.png" title="Search by projects">
+<img src="images/Interface/UI20_Search_Projects.png" width="650" title="Search_Projects"> <img src="images/Interface/UI20_Search_Projects_M.png" height="453" title="Search_Projects_Mobile">
 
 Figure 26: [Search by Projects](https://paginas.fe.up.pt/~up201506252/search_projects.php).
 
@@ -163,7 +163,7 @@ Figure 27: [Search by Users](https://paginas.fe.up.pt/~up201506252/search_users.
 Figure 28: [Search by Tasks](https://paginas.fe.up.pt/~up201506252/search_tasks.php).
 
 ### UI23: Administration Log In:
-<img src="images/Interface/UI23_Admin_log_in.png" title="Admin Log In">
+<img src="images/Interface/UI23_Admin_Login.png" width="650" title="Admin_Login"> <img src="images/Interface/UI23_Admin_Login_M.png" height="453" title="Admin_Login_Mobile">
 
 Figure 29: [Administration Log In](https://paginas.fe.up.pt/~up201506252/admin/index.php).
 
