Search Tasks and Search Users --> A3

--- a/artifacts/A3/A3.md
+++ b/artifacts/A3/A3.md
@@ -153,12 +153,12 @@ Figure 25: Edit Profile.
 Figure 26: [Search by Projects](https://paginas.fe.up.pt/~up201506252/search_projects.php).
 
 ### UI21: Search by Users:
-<img src="images/Interface/UI21_Search_users.png" title="Search by users">
+<img src="images/Interface/UI21_Search_Users.png" width="650" title="Search_Users"> <img src="images/Interface/UI21_Search_Users_M.png" height="453" title="Search_Users_Mobile">
 
 Figure 27: [Search by Users](https://paginas.fe.up.pt/~up201506252/search_users.php).
 
 ### UI22: Search by Tasks:
-<img src="images/Interface/UI22_Search_tasks.png" title="Search by tasks">
+<img src="images/Interface/UI22_Search_Tasks.png" width="650" title="Search_Tasks"> <img src="images/Interface/UI22_Search_Tasks_M.png" height="453" title="Search_Tasks_Mobile">
 
 Figure 28: [Search by Tasks](https://paginas.fe.up.pt/~up201506252/search_tasks.php).
 
