--- a/artifacts/A3/A3.md
+++ b/artifacts/A3/A3.md
@@ -138,7 +138,7 @@ Figure 22: [Task Page](https://paginas.fe.up.pt/~up201506252/task_page.php).
 Figure 23: [Edit Task](https://paginas.fe.up.pt/~up201506252/task_edit.php).
 
 ### UI18: Profile:
-<img src="images/Interface/UI18_Profile.png" title="Profile Page">
+<img src="images/Interface/UI18_Profile.png" width="650" title="Profile"> <img src="images/Interface/UI18_Profile_M.png" height="453" title="Profile_Mobile">
 
 Figure 24: [Profile](https://paginas.fe.up.pt/~up201506252/profile.php).
 
