A3 -- Interface and common features 💬👌

--- a/artifacts/A3/A3.md
+++ b/artifacts/A3/A3.md
@@ -6,7 +6,7 @@ This artifact contains the overview of the interface elements and features for o
 
 **Plenum** is a web application based on HTML5, JavaScript and CSS. The user interface was implemented using the Bootstrap framework.
 
-<img src="images/Common_features/Homepage.png" width="650" title="Homepage"> <img src="images/Common_features/Homepage_M.png" height="453" title="Homepage_Mobile">
+<img src="images/Common/Homepage.png" width="650" title="Homepage"> <img src="images/Common/Homepage_M.png" height="453" title="Homepage_Mobile">
 
 
 1.  Logo
