--- a/artifacts/A3/A3.md
+++ b/artifacts/A3/A3.md
@@ -67,120 +67,125 @@ Figure 8: [FAQ](https://paginas.fe.up.pt/~up201506252/faq.php).
 
 Figure 9: [About](https://paginas.fe.up.pt/~up201506252/about.php).
 
-### UI04: Log In:
-<img src="images/Interface/UI04_Login.png" width="650" title="Login"> <img src="images/Interface/UI04_Login_M.png" height="453" title="Login_Mobile">
+### UI04: Contact:
+<img src="images/Interface/UI04_Contact.png" width="650" title="Contact"> <img src="images/Interface/UI04_Contact_M.png" height="453" title="Contact_Mobile">
 
-Figure 10: Log In.
+Figure 10: [Contact](https://paginas.fe.up.pt/~up201506252/about.php).
 
-### UI05: Register:
-<img src="images/Interface/UI05_Register.png" width="650" title="Register"> <img src="images/Interface/UI05_Register_M.png" height="453" title="Register_Mobile">
+### UI05: Log In:
+<img src="images/Interface/UI05_Login.png" width="650" title="Login"> <img src="images/Interface/UI05_Login_M.png" height="453" title="Login_Mobile">
 
-Figure 11: Register.
+Figure 11: Log In.
 
-### UI06: Dashboard:
-<img src="images/Interface/UI06_Dashboard.png" width="650" title="Dashboard"> <img src="images/Interface/UI06_Dashboard_M.png" height="453" title="Dashboard_Mobile">
+### UI06: Register:
+<img src="images/Interface/UI06_Register.png" width="650" title="Register"> <img src="images/Interface/UI06_Register_M.png" height="453" title="Register_Mobile">
 
-Figure 12: [Dashboard](https://paginas.fe.up.pt/~up201506252/dashboard.php).
+Figure 12: Register.
 
-### UI07: Dashboard My Projects:
-<img src="images/Interface/UI07_Dashboard_projects.png" width="650" title="Dashboard_Projects"> <img src="images/Interface/UI07_Dashboard_Projects_M.png" height="453" title="Dashboard_Projects_Mobile">
+### UI07: Dashboard:
+<img src="images/Interface/UI07_Dashboard.png" width="650" title="Dashboard"> <img src="images/Interface/UI07_Dashboard_M.png" height="453" title="Dashboard_Mobile">
 
-Figure 13: [Dashboard My Projects](https://paginas.fe.up.pt/~up201506252/dashboard_my_projects.php).
+Figure 13: [Dashboard](https://paginas.fe.up.pt/~up201506252/dashboard.php).
 
-### UI08: Dashboard My Tasks:
-<img src="images/Interface/UI08_Dashboard_tasks.png" title="Dashboard My Tasks">
+### UI08: Dashboard My Projects:
+<img src="images/Interface/UI08_Dashboard_projects.png" width="650" title="Dashboard_Projects"> <img src="images/Interface/UI08_Dashboard_Projects_M.png" height="453" title="Dashboard_Projects_Mobile">
 
-Figure 14: [Dashboard My Tasks](https://paginas.fe.up.pt/~up201506252/dashboard_tasks.php).
+Figure 14: [Dashboard My Projects](https://paginas.fe.up.pt/~up201506252/dashboard_my_projects.php).
 
-### UI09: New Project:
-<img src="images/Interface/UI09_New_project.png" title="New Project">
+### UI09: Dashboard My Tasks:
+<img src="images/Interface/UI09_Dashboard_tasks.png" title="Dashboard My Tasks">
 
-Figure 15: New Project.
+Figure 15: [Dashboard My Tasks](https://paginas.fe.up.pt/~up201506252/dashboard_tasks.php).
 
-### UI10: Project Tasks:
-<img src="images/Interface/UI10_Project_tasks.png" title="Project Tasks">
+### UI10: New Project:
+<img src="images/Interface/UI10_New_project.png" title="New Project">
 
-Figure 16: [Project Tasks](https://paginas.fe.up.pt/~up201506252/project_tasks.php).
+Figure 16: New Project.
 
-### UI11: Project Forum:
-<img src="images/Interface/UI11_Project_forum.png" title="Project Forum">
+### UI11: Project Tasks:
+<img src="images/Interface/UI11_Project_tasks.png" title="Project Tasks">
 
-Figure 17: [Project Forum](https://paginas.fe.up.pt/~up201506252/project_forum.php).
+Figure 17: [Project Tasks](https://paginas.fe.up.pt/~up201506252/project_tasks.php).
 
-### UI12: Project Members:
-<img src="images/Interface/UI12_Project_members.png" title="Project Members">
+### UI12: Project Forum:
+<img src="images/Interface/UI12_Project_forum.png" title="Project Forum">
 
-Figure 18: [Project Members](https://paginas.fe.up.pt/~up201506252/project_members.php).
+Figure 18: [Project Forum](https://paginas.fe.up.pt/~up201506252/project_forum.php).
 
-### UI13: Project Options:
-<img src="images/Interface/UI13_Project_options.png" title="Project Options">
+### UI13: Project Members:
+<img src="images/Interface/UI13_Project_members.png" title="Project Members">
 
-Figure 19: [Project Options](https://paginas.fe.up.pt/~up201506252/project_options.php).
+Figure 19: [Project Members](https://paginas.fe.up.pt/~up201506252/project_members.php).
 
-### UI14: Project Manage Tasks:
-<img src="images/Interface/UI14_Project_manage_tasks.png" title="Project Options">
+### UI14: Project Options:
+<img src="images/Interface/UI14_Project_options.png" title="Project Options">
 
-Figure 20: [Project Manage Tasks](https://paginas.fe.up.pt/~up201506252/project_manage_tasks.php).
+Figure 20: [Project Options](https://paginas.fe.up.pt/~up201506252/project_options.php).
 
-### UI15: Project Manage Users:
-<img src="images/Interface/UI15_Project_manage_users.png" title="Project Options">
+### UI15: Project Manage Tasks:
+<img src="images/Interface/UI15_Project_manage_tasks.png" title="Project Options">
 
-Figure 21: [Project Manage Users](https://paginas.fe.up.pt/~up201506252/project_manage_users.php).
+Figure 21: [Project Manage Tasks](https://paginas.fe.up.pt/~up201506252/project_manage_tasks.php).
 
-### UI16: Task Page:
-<img src="images/Interface/UI16_Task.png" title="Task Page">
+### UI16: Project Manage Users:
+<img src="images/Interface/UI16_Project_manage_users.png" title="Project Options">
 
-Figure 22: [Task Page](https://paginas.fe.up.pt/~up201506252/task_page.php).
+Figure 22: [Project Manage Users](https://paginas.fe.up.pt/~up201506252/project_manage_users.php).
 
-### UI17: Edit Task:
-<img src="images/Interface/UI17_Edit_task.png" title="Edit task">
+### UI17: Task Page:
+<img src="images/Interface/UI17_Task.png" title="Task Page">
 
-Figure 23: [Edit Task](https://paginas.fe.up.pt/~up201506252/task_edit.php).
+Figure 23: [Task Page](https://paginas.fe.up.pt/~up201506252/task_page.php).
 
-### UI18: Profile:
-<img src="images/Interface/UI18_Profile.png" width="650" title="Profile"> <img src="images/Interface/UI18_Profile_M.png" height="453" title="Profile_Mobile">
+### UI18: Edit Task:
+<img src="images/Interface/UI18_Edit_task.png" title="Edit task">
 
-Figure 24: [Profile](https://paginas.fe.up.pt/~up201506252/profile.php).
+Figure 24: [Edit Task](https://paginas.fe.up.pt/~up201506252/task_edit.php).
 
-### UI19: Edit Profile:
-<img src="images/Interface/UI19_Edit_profile.png" title="Edit Profile">
+### UI19: Profile:
+<img src="images/Interface/UI19_Profile.png" width="650" title="Profile"> <img src="images/Interface/UI19_Profile_M.png" height="453" title="Profile_Mobile">
 
-Figure 25: Edit Profile.
+Figure 25: [Profile](https://paginas.fe.up.pt/~up201506252/profile.php).
 
-### UI20: Search by Projects:
-<img src="images/Interface/UI20_Search_projects.png" width="650" title="Search_Projects"> <img src="images/Interface/UI20_Search_Projects_M.png" height="453" title="Search_Projects_Mobile">
+### UI20: Edit Profile:
+<img src="images/Interface/UI20_Edit_profile.png" title="Edit Profile">
 
-Figure 26: [Search by Projects](https://paginas.fe.up.pt/~up201506252/search_projects.php).
+Figure 26: Edit Profile.
 
-### UI21: Search by Users:
-<img src="images/Interface/UI21_Search_users.png" width="650" title="Search_Users"> <img src="images/Interface/UI21_Search_Users_M.png" height="453" title="Search_Users_Mobile">
+### UI21: Search by Projects:
+<img src="images/Interface/UI21_Search_projects.png" width="650" title="Search_Projects"> <img src="images/Interface/UI21_Search_Projects_M.png" height="453" title="Search_Projects_Mobile">
 
-Figure 27: [Search by Users](https://paginas.fe.up.pt/~up201506252/search_users.php).
+Figure 27: [Search by Projects](https://paginas.fe.up.pt/~up201506252/search_projects.php).
 
-### UI22: Search by Tasks:
-<img src="images/Interface/UI22_Search_tasks.png" width="650" title="Search_Tasks"> <img src="images/Interface/UI22_Search_Tasks_M.png" height="453" title="Search_Tasks_Mobile">
+### UI22: Search by Users:
+<img src="images/Interface/UI22_Search_users.png" width="650" title="Search_Users"> <img src="images/Interface/UI22_Search_Users_M.png" height="453" title="Search_Users_Mobile">
 
-Figure 28: [Search by Tasks](https://paginas.fe.up.pt/~up201506252/search_tasks.php).
+Figure 28: [Search by Users](https://paginas.fe.up.pt/~up201506252/search_users.php).
 
-### UI23: Administration Log In:
-<img src="images/Interface/UI23_Admin_Login.png" width="650" title="Admin_Login"> <img src="images/Interface/UI23_Admin_Login_M.png" height="453" title="Admin_Login_Mobile">
+### UI23: Search by Tasks:
+<img src="images/Interface/UI23_Search_tasks.png" width="650" title="Search_Tasks"> <img src="images/Interface/UI23_Search_Tasks_M.png" height="453" title="Search_Tasks_Mobile">
 
-Figure 29: [Administration Log In](https://paginas.fe.up.pt/~up201506252/admin/index.php).
+Figure 29: [Search by Tasks](https://paginas.fe.up.pt/~up201506252/search_tasks.php).
 
-### UI24: Administration Manage Projects:
-<img src="images/Interface/UI24_Admin_projects.png" title="Admin manage projects">
+### UI24: Administration Log In:
+<img src="images/Interface/UI24_Admin_Login.png" width="650" title="Admin_Login"> <img src="images/Interface/UI24_Admin_Login_M.png" height="453" title="Admin_Login_Mobile">
 
-Figure 30: [Administration Manage Projects](https://paginas.fe.up.pt/~up201506252/admin/projects.php).
+Figure 30: [Administration Log In](https://paginas.fe.up.pt/~up201506252/admin/index.php).
 
-### UI25: Administration Manage Users:
-<img src="images/Interface/UI25_Admin_users.png" title="Admin manage users">
+### UI25: Administration Manage Projects:
+<img src="images/Interface/UI25_Admin_projects.png" title="Admin manage projects">
 
-Figure 31: [Administration Manage Users](https://paginas.fe.up.pt/~up201506252/admin/users.php).
+Figure 31: [Administration Manage Projects](https://paginas.fe.up.pt/~up201506252/admin/projects.php).
 
-### UI26: Error Page:
-<img src="images/Interface/UI26_Error.png" width="650" title="Error"> <img src="images/Interface/UI26_Error_M.png" height="453" title="Error_Mobile">
+### UI26: Administration Manage Users:
+<img src="images/Interface/UI26_Admin_users.png" title="Admin manage users">
 
-Figure 32: [Error Page](https://paginas.fe.up.pt/~up201506252/error.php).
+Figure 32: [Administration Manage Users](https://paginas.fe.up.pt/~up201506252/admin/users.php).
+
+### UI27: Error Page:
+<img src="images/Interface/UI27_Error.png" width="650" title="Error"> <img src="images/Interface/UI27_Error_M.png" height="453" title="Error_Mobile">
+
+Figure 33: [Error Page](https://paginas.fe.up.pt/~up201506252/error.php).
 
 ***
 <!-- ## Revision history
