Dashboard Tasks --> A3 :books:

--- a/artifacts/A3/A3.md
+++ b/artifacts/A3/A3.md
@@ -93,7 +93,7 @@ Figure 13: [Dashboard](https://paginas.fe.up.pt/~up201506252/dashboard.php).
 Figure 14: [Dashboard My Projects](https://paginas.fe.up.pt/~up201506252/dashboard_my_projects.php).
 
 ### UI09: Dashboard My Tasks:
-<img src="images/Interface/UI09_Dashboard_tasks.png" title="Dashboard My Tasks">
+<img src="images/Interface/UI09_Dashboard_Tasks.png" width="650" title="Dashboard_Tasks"> <img src="images/Interface/UI09_Dashboard_Tasks_M.png" height="453" title="Dashboard_Tasks_Mobile">
 
 Figure 15: [Dashboard My Tasks](https://paginas.fe.up.pt/~up201506252/dashboard_tasks.php).
 
