--- a/artifacts/A3/A3.md
+++ b/artifacts/A3/A3.md
@@ -18,11 +18,11 @@ Figure 1: Homepage of PLENUM.
 
 In this figure some characteristics common to all the pages are highlighted:
 - Color Scheme:
-  - Dark Liver (#50514F);
-  - Sunset Orange (#F25F5C);
-  - Mustard (#FFE066);
-  - Lapis Lazuli (#247BA0);
-  - Green Sheen (#70C1B3);
+  - <span style="color:#50514F;">Dark Liver (#50514F)</span>
+  - <span style="color:#F25F5C;">Sunset Orange (#F25F5C)</span>
+  - <span style="color:#FFE066;">Mustard (#FFE066)</span>
+  - <span style="color:#247BA0;">Lapis Lazuli (#247BA0)</span>
+  - <span style="color:#70C1B3;">Green Sheen (#70C1B3)</span>
 - The common links to the various pages maintain their position to make the user experience consistent;
 - User have the link to the dashboard, where he can view all his projects and tasks;
 - Search any User, Project or Task;
