--- a/artifacts/A3/A3.md
+++ b/artifacts/A3/A3.md
@@ -58,12 +58,12 @@ Figure 6: Create Task from Dashboard.
 Figure 7: [Homepage](https://paginas.fe.up.pt/~up201506252/index.php).
 
 ### UI02: FAQ:
-<img src="images/Interface/UI02_FAQ.png" title="FAQ">
+<img src="images/Interface/UI02_FAQ.png" width="650" title="FAQ"> <img src="images/Interface/UI02_FAQ_M.png" height="453" title="FAQ_Mobile">
 
 Figure 8: [FAQ](https://paginas.fe.up.pt/~up201506252/faq.php).
 
 ### UI03: About:
-<img src="images/Interface/UI03_About.png" title="About">
+<img src="images/Interface/UI03_About.png" width="650" title="About"> <img src="images/Interface/UI03_About_M.png" height="453" title="About_Mobile">
 
 Figure 9: [About](https://paginas.fe.up.pt/~up201506252/about.php).
 
