89 staged files, i can feel it 🚑🚑

--- a/artifacts/A3/A3.md
+++ b/artifacts/A3/A3.md
@@ -53,137 +53,137 @@ Figure 6: Create Task from Dashboard.
 
 ## 4. Interfaces
 ### UI01: Homepage
-<img src="images/Interface/UI01_Homepage.png" width="550" title="Homepage"> <img src="images/Interface/UI01_Homepage_M.png" height="513" title="Homepage_Mobile">
+<img src="images/Interface/Desktop/UI01_Homepage.png" width="550" title="Homepage"> <img src="images/Interface/Mobile/UI01_Homepage.png" height="513" title="Homepage_Mobile">
 
 Figure 7: [Homepage](https://paginas.fe.up.pt/~up201506252/index.php).
 
 ### UI02: FAQ:
-<img src="images/Interface/UI02_FAQ.png" width="650" title="FAQ"> <img src="images/Interface/UI02_FAQ_M.png" height="453" title="FAQ_Mobile">
+<img src="images/Interface/Desktop/UI02_FAQ.png" width="550" title="FAQ"> <img src="images/Interface/Mobile/UI02_FAQ.png" height="513" title="FAQ_Mobile">
 
 Figure 8: [FAQ](https://paginas.fe.up.pt/~up201506252/faq.php).
 
 ### UI03: About:
-<img src="images/Interface/UI03_About.png" width="650" title="About"> <img src="images/Interface/UI03_About_M.png" height="453" title="About_Mobile">
+<img src="images/Interface/Desktop/UI03_About.png" width="550" title="About"> <img src="images/Interface/Mobile/UI03_About.png" height="513" title="About_Mobile">
 
 Figure 9: [About](https://paginas.fe.up.pt/~up201506252/about.php).
 
 ### UI04: Contact:
-<img src="images/Interface/UI04_Contact.png" width="650" title="Contact"> <img src="images/Interface/UI04_Contact_M.png" height="453" title="Contact_Mobile">
+<img src="images/Interface/Desktop/UI04_Contact.png" width="550" title="Contact"> <img src="images/Interface/Mobile/UI04_Contact.png" height="513" title="Contact_Mobile">
 
 Figure 10: [Contact](https://paginas.fe.up.pt/~up201506252/about.php).
 
 ### UI05: Log In:
-<img src="images/Interface/UI05_Login.png" width="650" title="Login"> <img src="images/Interface/UI05_Login_M.png" height="453" title="Login_Mobile">
+<img src="images/Interface/Desktop/UI05_Login.png" width="550" title="Login"> <img src="images/Interface/Mobile/UI05_Login.png" height="513" title="Login_Mobile">
 
 Figure 11: Log In.
 
 ### UI06: Register:
-<img src="images/Interface/UI06_Register.png" width="650" title="Register"> <img src="images/Interface/UI06_Register_M.png" height="453" title="Register_Mobile">
+<img src="images/Interface/Desktop/UI06_Register.png" width="550" title="Register"> <img src="images/Interface/Mobile/UI06_Register.png" height="513" title="Register_Mobile">
 
 Figure 12: Register.
 
 ### UI07: Dashboard:
-<img src="images/Interface/UI07_Dashboard.png" width="650" title="Dashboard"> <img src="images/Interface/UI07_Dashboard_M.png" height="453" title="Dashboard_Mobile">
+<img src="images/Interface/Desktop/UI07_Dashboard.png" width="550" title="Dashboard"> <img src="images/Interface/Mobile/UI07_Dashboard.png" height="513" title="Dashboard_Mobile">
 
 Figure 13: [Dashboard](https://paginas.fe.up.pt/~up201506252/dashboard.php).
 
 ### UI08: Dashboard My Projects:
-<img src="images/Interface/UI08_Dashboard_Projects.png" width="650" title="Dashboard_Projects"> <img src="images/Interface/UI08_Dashboard_Projects_M.png" height="453" title="Dashboard_Projects_Mobile">
+<img src="images/Interface/Desktop/UI08_Dashboard_Projects.png" width="550" title="Dashboard_Projects"> <img src="images/Interface/Mobile/UI08_Dashboard_Projects.png" height="513" title="Dashboard_Projects_Mobile">
 
 Figure 14: [Dashboard My Projects](https://paginas.fe.up.pt/~up201506252/dashboard_my_projects.php).
 
 ### UI09: Dashboard My Tasks:
-<img src="images/Interface/UI09_Dashboard_Tasks.png" width="650" title="Dashboard_Tasks"> <img src="images/Interface/UI09_Dashboard_Tasks_M.png" height="453" title="Dashboard_Tasks_Mobile">
+<img src="images/Interface/Desktop/UI09_Dashboard_Tasks.png" width="550" title="Dashboard_Tasks"> <img src="images/Interface/Mobile/UI09_Dashboard_Tasks.png" height="513" title="Dashboard_Tasks_Mobile">
 
 Figure 15: [Dashboard My Tasks](https://paginas.fe.up.pt/~up201506252/dashboard_tasks.php).
 
 ### UI10: New Project:
-<img src="images/Interface/UI10_New_project.png" title="New Project">
+<img src="images/Interface/Desktop/UI10_New_Project.png" width="550" title="New_Project"> <img src="images/Interface/Mobile/UI10_New_Project.png" height="513" title="New_Project_Mobile">
 
 Figure 16: New Project.
 
 ### UI11: Project Tasks:
-<img src="images/Interface/UI11_Project_tasks.png" title="Project Tasks">
+<img src="images/Interface/Desktop/UI11_Project_Tasks.png" width="550" title="Project_Tasks"> <img src="images/Interface/Mobile/UI11_Project_Tasks.png" height="513" title="Project_Tasks_Mobile">
 
 Figure 17: [Project Tasks](https://paginas.fe.up.pt/~up201506252/project_tasks.php).
 
 ### UI12: Project Forum:
-<img src="images/Interface/UI12_Project_forum.png" title="Project Forum">
+<img src="images/Interface/Desktop/UI12_Project_Forum.png" width="550" title="Project_Forum"> <img src="images/Interface/Mobile/UI12_Project_Forum.png" height="513" title="Project_Forum_Mobile">
 
 Figure 18: [Project Forum](https://paginas.fe.up.pt/~up201506252/project_forum.php).
 
 ### UI13: Project Members:
-<img src="images/Interface/UI13_Project_members.png" title="Project Members">
+<img src="images/Interface/Desktop/UI13_Project_Members.png" width="550" title="Project_Members"> <img src="images/Interface/Mobile/UI13_Project_Members.png" height="513" title="Project_Members_Mobile">
 
 Figure 19: [Project Members](https://paginas.fe.up.pt/~up201506252/project_members.php).
 
 ### UI14: Project Options:
-<img src="images/Interface/UI14_Project_options.png" title="Project Options">
+<img src="images/Interface/Desktop/UI14_Project_Options.png" width="550" title="Project_Options"> <img src="images/Interface/Mobile/UI14_Project_Options.png" height="513" title="Project_Options_Mobile">
 
 Figure 20: [Project Options](https://paginas.fe.up.pt/~up201506252/project_options.php).
 
 ### UI15: Project Manage Tasks:
-<img src="images/Interface/UI15_Project_manage_tasks.png" title="Project Options">
+<img src="images/Interface/Desktop/UI15_Project_Manage_Tasks.png" width="550" title="Project_Manage_Tasks"> <img src="images/Interface/Mobile/UI15_Project_Manage_Tasks.png" height="513" title="Project_Manage_Tasks_Mobile">
 
 Figure 21: [Project Manage Tasks](https://paginas.fe.up.pt/~up201506252/project_manage_tasks.php).
 
 ### UI16: Project Manage Users:
-<img src="images/Interface/UI16_Project_manage_users.png" title="Project Options">
+<img src="images/Interface/Desktop/UI16_Project_Manage_Users.png" width="550" title="Project_Manage_Users"> <img src="images/Interface/Mobile/UI16_Project_Manage_Users.png" height="513" title="Project_Manage_Users_Mobile">
 
 Figure 22: [Project Manage Users](https://paginas.fe.up.pt/~up201506252/project_manage_users.php).
 
 ### UI17: Task Page:
-<img src="images/Interface/UI17_Task.png" title="Task Page">
+<img src="images/Interface/Desktop/UI17_Task.png" width="550" title="Task"> <img src="images/Interface/Mobile/UI17_Task.png" height="513" title="Task_Mobile">
 
 Figure 23: [Task Page](https://paginas.fe.up.pt/~up201506252/task_page.php).
 
 ### UI18: Edit Task:
-<img src="images/Interface/UI18_Edit_task.png" title="Edit task">
+<img src="images/Interface/Desktop/UI18_Edit_Task.png" width="550" title="Edit_Task"> <img src="images/Interface/Mobile/UI18_Edit_Task.png" height="513" title="Edit_Task_Mobile">
 
 Figure 24: [Edit Task](https://paginas.fe.up.pt/~up201506252/task_edit.php).
 
 ### UI19: Profile:
-<img src="images/Interface/UI19_Profile.png" width="650" title="Profile"> <img src="images/Interface/UI19_Profile_M.png" height="453" title="Profile_Mobile">
+<img src="images/Interface/Desktop/UI19_Profile.png" width="550" title="Profile"> <img src="images/Interface/Mobile/UI19_Profile.png" height="513" title="Profile_Mobile">
 
 Figure 25: [Profile](https://paginas.fe.up.pt/~up201506252/profile.php).
 
 ### UI20: Edit Profile:
-<img src="images/Interface/UI20_Edit_profile.png" title="Edit Profile">
+<img src="images/Interface/Desktop/UI20_Edit_Profile.png" width="550" title="Edit_Profile"> <img src="images/Interface/Mobile/UI20_Edit_Profile.png" height="513" title="Edit_Profile_Mobile">
 
 Figure 26: Edit Profile.
 
 ### UI21: Search by Projects:
-<img src="images/Interface/UI21_Search_Projects.png" width="650" title="Search_Projects"> <img src="images/Interface/UI21_Search_Projects_M.png" height="453" title="Search_Projects_Mobile">
+<img src="images/Interface/Desktop/UI21_Search_Profile.png" width="550" title="Search_Profile"> <img src="images/Interface/Mobile/UI21_Search_Profile.png" height="513" title="Search_Profile_Mobile">
 
 Figure 27: [Search by Projects](https://paginas.fe.up.pt/~up201506252/search_projects.php).
 
 ### UI22: Search by Users:
-<img src="images/Interface/UI22_Search_Users.png" width="650" title="Search_Users"> <img src="images/Interface/UI22_Search_Users_M.png" height="453" title="Search_Users_Mobile">
+<img src="images/Interface/Desktop/UI22_Search_Users.png" width="550" title="Search_Users"> <img src="images/Interface/Mobile/UI22_Search_Users.png" height="513" title="Search_Users_Mobile">
 
 Figure 28: [Search by Users](https://paginas.fe.up.pt/~up201506252/search_users.php).
 
 ### UI23: Search by Tasks:
-<img src="images/Interface/UI23_Search_Tasks.png" width="650" title="Search_Tasks"> <img src="images/Interface/UI23_Search_Tasks_M.png" height="453" title="Search_Tasks_Mobile">
+<img src="images/Interface/Desktop/UI23_Search_Tasks.png" width="550" title="Search_Tasks"> <img src="images/Interface/Mobile/UI23_Search_Tasks.png" height="513" title="Search_Tasks_Mobile">
 
 Figure 29: [Search by Tasks](https://paginas.fe.up.pt/~up201506252/search_tasks.php).
 
 ### UI24: Administration Log In:
-<img src="images/Interface/UI24_Admin_Login.png" width="650" title="Admin_Login"> <img src="images/Interface/UI24_Admin_Login_M.png" height="453" title="Admin_Login_Mobile">
+<img src="images/Interface/Desktop/UI24_Admin_Login.png" width="550" title="Admin_Login"> <img src="images/Interface/Mobile/UI24_Admin_Login.png" height="513" title="Admin_Login_Mobile">
 
 Figure 30: [Administration Log In](https://paginas.fe.up.pt/~up201506252/admin/index.php).
 
 ### UI25: Administration Manage Projects:
-<img src="images/Interface/UI25_Admin_projects.png" title="Admin manage projects">
+<img src="images/Interface/Desktop/UI25_Admin_Projects.png" width="550" title="Admin_Projects"> <img src="images/Interface/Mobile/UI25_Admin_Projects.png" height="513" title="Admin_Projects_Mobile">
 
 Figure 31: [Administration Manage Projects](https://paginas.fe.up.pt/~up201506252/admin/projects.php).
 
 ### UI26: Administration Manage Users:
-<img src="images/Interface/UI26_Admin_users.png" title="Admin manage users">
+<img src="images/Interface/Desktop/UI26_Admin_Users.png" width="550" title="Admin_Users"> <img src="images/Interface/Mobile/UI26_Admin_Users.png" height="513" title="Admin_Users_Mobile">
 
 Figure 32: [Administration Manage Users](https://paginas.fe.up.pt/~up201506252/admin/users.php).
 
 ### UI27: Error Page:
-<img src="images/Interface/UI27_Error.png" width="650" title="Error"> <img src="images/Interface/UI27_Error_M.png" height="453" title="Error_Mobile">
+<img src="images/Interface/Desktop/UI27_Error.png" width="550" title="Error"> <img src="images/Interface/Mobile/UI27_Error.png" height="513" title="Error_Mobile">
 
 Figure 33: [Error Page](https://paginas.fe.up.pt/~up201506252/error.php).
 
