--- a/artifacts/A3/A3.md
+++ b/artifacts/A3/A3.md
@@ -108,7 +108,7 @@ Figure 16: New Project.
 Figure 17: [Project Tasks](https://paginas.fe.up.pt/~up201506252/project_tasks.php).
 
 ### UI12: Project Forum:
-<img src="images/Interface/Desktop/UI12_Project_Forum.png" width="550" title="Project_Forum"> <img src="images/Interface/Mobile/UI12_Project_Forum.png" height="513" title="Project_Forum_Mobile">
+<img src="images/Interface/Desktop/UI12_Project_Forum.png" width="550" title="Project_Forum"> <img src="images/Interface/Mobile/UI12_Project_Forum.png" height="540" title="Project_Forum_Mobile">
 
 Figure 18: [Project Forum](https://paginas.fe.up.pt/~up201506252/project_forum.php).
 
@@ -118,7 +118,7 @@ Figure 18: [Project Forum](https://paginas.fe.up.pt/~up201506252/project_forum.p
 Figure 19: [Project Members](https://paginas.fe.up.pt/~up201506252/project_members.php).
 
 ### UI14: Project Options:
-<img src="images/Interface/Desktop/UI14_Project_Options.png" width="550" title="Project_Options"> <img src="images/Interface/Mobile/UI14_Project_Options.png" height="513" title="Project_Options_Mobile">
+<img src="images/Interface/Desktop/UI14_Project_Options.png" width="550" title="Project_Options"> <img src="images/Interface/Mobile/UI14_Project_Options.png" height="530" title="Project_Options_Mobile">
 
 Figure 20: [Project Options](https://paginas.fe.up.pt/~up201506252/project_options.php).
 
@@ -133,7 +133,7 @@ Figure 21: [Project Manage Tasks](https://paginas.fe.up.pt/~up201506252/project_
 Figure 22: [Project Manage Users](https://paginas.fe.up.pt/~up201506252/project_manage_users.php).
 
 ### UI17: Task Page:
-<img src="images/Interface/Desktop/UI17_Task.png" width="550" title="Task"> <img src="images/Interface/Mobile/UI17_Task.png" height="513" title="Task_Mobile">
+<img src="images/Interface/Desktop/UI17_Task.png" width="550" title="Task"> <img src="images/Interface/Mobile/UI17_Task.png" height="600" title="Task_Mobile">
 
 Figure 23: [Task Page](https://paginas.fe.up.pt/~up201506252/task_page.php).
 
@@ -153,7 +153,7 @@ Figure 25: [Profile](https://paginas.fe.up.pt/~up201506252/profile.php).
 Figure 26: Edit Profile.
 
 ### UI21: Search by Projects:
-<img src="images/Interface/Desktop/UI21_Search_Profile.png" width="550" title="Search_Profile"> <img src="images/Interface/Mobile/UI21_Search_Profile.png" height="513" title="Search_Profile_Mobile">
+<img src="images/Interface/Desktop/UI21_Search_Projects.png" width="550" title="Search_Projects"> <img src="images/Interface/Mobile/UI21_Search_Projects.png" height="513" title="Search_Projects_Mobile">
 
 Figure 27: [Search by Projects](https://paginas.fe.up.pt/~up201506252/search_projects.php).
 
